🥳 fabout section glitching and overlaping other section} bug fic

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ main .my-work .form-contact {
 .about-section {
   height: 100vh;
 }
-.about {
+.about-code {
   border-radius: 5px;
   height: 500px;
   border-left: 2px solid green;
